these are the recent changes on the code, i've fixed the gap between the templetes, then i've created a profile image seciton very similer to facebook profile image which will be repleced by the selected profile image when the user will select an image

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
 }
 
 
