--- a/src/ResumeBuilder/Layout/ResumeHeader/ResumeHeader.css
+++ b/src/ResumeBuilder/Layout/ResumeHeader/ResumeHeader.css
@@ -2,16 +2,19 @@
     padding: 15px 0;
     border-bottom: 1px solid #dbdbdb;
 }
+
 .resume-header-content {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 10px;
 }
-/* .resume-header-content .resume-header-title h2{} */
+
 .resume-header-content .resume-header-title span {
     font-size: 14px;
     color: var(--primary-link-color);
 }
+
 .resume-header-content .resume-header-button button {
     width: 130px;
     height: 45px;
@@ -24,15 +27,11 @@
     cursor: pointer;
     transition: .2s;
 }
-.resume-header-content .resume-header-button button:hover{
+
+.resume-header-content .resume-header-button button:hover {
     background: #2f89c5;
 }
-/* .resume-header-content .resume-header-button a{}
-.resume-header-content .resume-header-button button{} */
-.jump-job-logo {
-    width: 130px;
-    height: 40px;
-}
+
 .jump-job-logo {
     width: 150px;
     height: 50px; 
